--- a/Alba.CsCss/Style/Original/nsCSSParser.tt
+++ b/Alba.CsCss/Style/Original/nsCSSParser.tt
@@ -179,8 +179,10 @@ namespace Alba.CsCss.Style
             .ReReplace(@"eCSSContext_(\w+)", "nsCSSContextType.$1")
             .ReReplace(@"eParseAnimationOrTransitionShorthand_(\w+)", "ParseAnimationOrTransitionShorthandResult.$1")
             .ReReplace(@"eCSSProperty(Alias|Extra)_(\w+)", "nsCSSProperty.$1_$2")
+            .ReReplace(@"\be(And|Or)\b", "SupportsConditionTermOperator.$1")
             .ReReplace(@"nsCSSPseudoClasses::ePseudoClass_(\w+)", "nsCSSPseudoClass.$1")
             .ReReplace(@"nsCSSPseudoElements::ePseudo_(\w+)", "nsCSSPseudoElement.$1")
+            .ReReplace(@"nsCSSProps::e(\w+)", "nsCSSProps.EnabledState.$1")
             .ReReplace(@"kNameSpaceID_(\w+)", "nsNameSpace.$1")
             .ReReplace(@"nsMediaExpression::e(\w+)", "nsMediaExpression.Range.$1")
             .ReReplace(@"nsMediaFeature::eMinMax(\w+)", "nsMediaFeature.RangeType.MinMax$1")
@@ -193,7 +195,6 @@ namespace Alba.CsCss.Style
             .ReReplace(@"NS_(ERROR_\w+)", "nsresult.$1")
             .ReReplace(@"NS_OK", "nsresult.OK")
             .ReReplace(@"CSS_PROPERTY_(\w+)", "nsCSSProps.$1")
-            .ReReplace(@"\be(And|Or)\b", "SupportsConditionTermOperator.$1")
             .ReReplace(@"nsCSSPseudoClasses::Type", "nsCSSPseudoClass")
             .ReReplace(@"nsCSSPseudoElements::Type", "nsCSSPseudoElement")
             .ReReplace(@"uint32_t parseFlags", "nsParseDeclaration parseFlags")
