Added public interfaces for rules, media queries and other classes; fixed selector parsing

--- a/Alba.CsCss/Style/Media/Original/nsMediaFeaturesH.tt
+++ b/Alba.CsCss/Style/Media/Original/nsMediaFeaturesH.tt
@@ -20,7 +20,7 @@
 
 namespace Alba.CsCss.Style
 {
-    internal partial class nsMediaFeature
+    public partial class nsMediaFeature
     {
         public enum <#=enumName#> {
 <#= source.ReReplace(@"\be(\w+)\b", "$1").NormalizeWhitespace().Unindent(8).Trim().Indent(12) #>
