--- a/Alba.CsCss/Style/Original/nsCSSFontDescList.tt
+++ b/Alba.CsCss/Style/Original/nsCSSFontDescList.tt
@@ -50,13 +50,13 @@ using System;
 
 namespace Alba.CsCss.Style
 {
-    internal partial class nsCSSFontFaceStyleDecl
+    public class nsCSSFontFaceStyleDecl
     {
 <#+   foreach (CssFontDesc desc in GetCssFontDescs()) { #>
         private nsCSSValue m<#=desc.Method#>;
 <#+   } #>
 
-        public nsCSSValue GetValue (nsCSSFontDesc aDescID)
+        internal nsCSSValue GetValue (nsCSSFontDesc aDescID)
         {
             switch (aDescID) {
 <#+           foreach (CssFontDesc desc in GetCssFontDescs()) { #>
@@ -66,7 +66,7 @@ namespace Alba.CsCss.Style
             }
         }
 
-        public void SetValue (nsCSSFontDesc aDescID, nsCSSValue value)
+        internal void SetValue (nsCSSFontDesc aDescID, nsCSSValue value)
         {
             switch (aDescID) {
 <#+           foreach (CssFontDesc desc in GetCssFontDescs()) { #>
@@ -75,6 +75,16 @@ namespace Alba.CsCss.Style
                 default: throw new ArgumentOutOfRangeException("aDescID");
             }
         }
+
+        // Public interface
+
+<#+   foreach (CssFontDesc desc in GetCssFontDescs()) { #>
+        public nsCSSValue <#=desc.Method#>
+        {
+            get { return m<#=desc.Method#>; }
+        }
+
+<#+   } #>
     }
 }
 <#+ } /* void GenerateCssFontFaceStyleDecl */ #>
