--- a/Alba.CsCss/Style/Original/nsCSSPropList.tt
+++ b/Alba.CsCss/Style/Original/nsCSSPropList.tt
@@ -55,7 +55,7 @@ using System.ComponentModel;
 
 namespace Alba.CsCss.Style
 {
-    internal enum nsCSSProperty
+    public enum nsCSSProperty
     {
         UNKNOWN = -1,
 <#+   foreach (CssProp prop in GetCssProps(CommonDefs)) { #>
