--- a/Alba.CsCss/Style/Original/nsCSSPseudoClassList.tt
+++ b/Alba.CsCss/Style/Original/nsCSSPseudoClassList.tt
@@ -32,7 +32,7 @@
 
 namespace Alba.CsCss.Style
 {
-    internal enum nsCSSPseudoClass {
+    public enum nsCSSPseudoClass {
 <#+   foreach (CssPseudoClass cls in GetCssPseudoClasses()) { #>
         <#=ToId(cls.Name)#>,
 <#+   } #>
