--- a/Alba.CsCss/Style/Original/nsCSSPseudoClassList.tt
+++ b/Alba.CsCss/Style/Original/nsCSSPseudoClassList.tt
@@ -5,7 +5,7 @@
 <#
     var T4 = GetT4();
     //T4.GenerateFile("nsCSSPseudoClassList.g.txt", () => GenerateCssPseudoClassListText());
-    T4.GenerateFile("nsCSSPseudoClass.g.cs", () => GenerateCssPseudoClass());
+    T4.GenerateFile("CssPseudoClass.g.cs", () => GenerateCssPseudoClass());
     T4.GenerateFile("nsCSSPseudoClasses.g.cs", () => GenerateCssPseudoClasses());
     T4.Process();
 #>
@@ -32,7 +32,7 @@
 
 namespace Alba.CsCss.Style
 {
-    public enum nsCSSPseudoClass {
+    public enum CssPseudoClass {
 <#+   foreach (CssPseudoClass cls in GetCssPseudoClasses()) { #>
         <#=ToId(cls.Name)#>,
 <#+   } #>
@@ -54,10 +54,10 @@ namespace Alba.CsCss.Style
 {
     internal static partial class nsCSSPseudoClasses
     {
-        private static readonly IDictionary<string, nsCSSPseudoClass> sPseudoClasses =
-            new Dictionary<string, nsCSSPseudoClass>(ReferenceEqualityComparer<object>.Default) {
+        private static readonly IDictionary<string, CssPseudoClass> sPseudoClasses =
+            new Dictionary<string, CssPseudoClass>(ReferenceEqualityComparer<object>.Default) {
 <#+           foreach (CssPseudoClass cls in GetCssPseudoClasses()) { #>
-                { <#=cls.Value#>, nsCSSPseudoClass.<#=ToId(cls.Name)#> },
+                { <#=cls.Value#>, CssPseudoClass.<#=ToId(cls.Name)#> },
 <#+           } #>
             };
     }
